wrap up ch2, marking sections as pending review

--- a/modules/ch2-services/pages/s1-fundamental-lecture.adoc
+++ b/modules/ch2-services/pages/s1-fundamental-lecture.adoc
@@ -4,7 +4,7 @@ Objective::
 
 Describe the OpenStack services required by typical applications and their virtual machines.
 
-WARNING: Work in Progress
+WARNING: Pending Review
 
 == The OpenStack Services Architecture
 
