--- a/modules/ch2-services/pages/s2-fundamental-quiz.adoc
+++ b/modules/ch2-services/pages/s2-fundamental-quiz.adoc
@@ -4,7 +4,7 @@ Objective::
 
 Assess the learner’s understanding of the purpose and utility of the fundamental OpenStack services.
 
-WARNING: Work in Progress
+WARNING: Pending Review
 
 == Questions
 
