--- a/modules/ch2-services/pages/s5-administration-lecture.adoc
+++ b/modules/ch2-services/pages/s5-administration-lecture.adoc
@@ -4,7 +4,7 @@ Objective::
 
 Describe OpenStack services which support operations and administrations personnel.
 
-WARNING: Work in Progress
+WARNING: Pending Review
 
 == OpenStack Cluster Management
 
