skeleton for the regions and az lecture and quiz plus the chapter demo

--- a/modules/ch3-multitenancy/nav.adoc
+++ b/modules/ch3-multitenancy/nav.adoc
@@ -1,4 +1,8 @@
 * xref:index.adoc[]
 ** xref:s1-domains-projects-lecture.adoc[]
-** xref:s2-multi-tenancy-quiz.adoc[]
-*** xref:s2-multi-tenancy-quiz-answers.adoc[]
+** xref:s2-multitenancy-quiz.adoc[]
+*** xref:s2-multitenancy-quiz-answers.adoc[]
+** xref:s3-regions-azs-cells-lecture.adoc[]
+** xref:s4-topology-quiz.adoc[]
+*** xref:s4-topology-quiz-answers.adoc[]
+** xref:s5-cluster-demo.adoc[]
