--- a/modules/ch3-multitenancy/pages/index.adoc
+++ b/modules/ch3-multitenancy/pages/index.adoc
@@ -8,6 +8,6 @@ WARNING: Work in Progress
 
 == Introduction
 
-This is the final chapter of this Introduction to OpenStack and introduces the features that enable large OpenStack clusters, with teams of Administrators and Operators, hosting multiple workloads, and potentially requiring heterogeneous compute nodes or just large control planes.
+This is the final chapter of the Introduction to OpenStack course and introduces the features that enable large OpenStack clusters, with teams of Administrators and Operators, hosting multiple workloads, and potentially requiring heterogeneous compute nodes or just large control planes.
 
-This chapter also introduces the features that enable OpenStack Administrators to protect clusters from applications and OpenStack Operators, and also enable OpenStack Operators and applications to be insulated from each others.
+This chapter also introduces the features that enable OpenStack Administrators to protect clusters from abuse and mistakes or bugs applications and OpenStack Operators, by insulating OpenStack Operators and applications from each other.
